<resources>    <string name="string526fg7df7hAjjkj24">Un&lt;br>able</string>    <string name="MySecretSecrets">MySecretSecrets</string>    <string name="g5f36j5hd6dg7554jkg346dg7fd">Enter text here</string>    <string name="setStateActive">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sed ante facilisis, iaculis metus at, vestibulum arcu. Vestibulum elit enim, blandit in mattis sed, rutrum quis leo. Nam gravida condimentum quam eget mollis. Nulla mauris diam, fermentum nec laoreet at, consectetur at odio. Duis ornare condimentum mauris non rhoncus. Nunc hendrerit justo eu massa vestibulum condimentum. Duis tincidunt iaculis velit eleifend ullamcorper. Pellentesque at ipsum felis. Donec quis tellus varius, feugiat neque sit amet, rutrum lorem. Fusce et massa id urna sagittis iaculis sed vitae erat. Pellentesque ornare turpis dignissim, scelerisque enim quis, molestie velit. Etiam sed velit diam.Donec fringilla diam finibus ligula vehicula bibendum. Quisque ultricies nibh ac leo elementum, in bibendum ex rutrum. Phasellus volutpat semper lacinia. Donec rutrum quam pulvinar, convallis libero ut, porta nunc. Nam luctus dignissim nibh sed cursus. Etiam ligula mauris, posuere a sem sed, bibendum viverra magna. Etiam nibh turpis, auctor elementum ipsum a, gravida suscipit augue. Fusce consequat, enim ut finibus varius, mauris nunc vestibulum magna, vel molestie erat dui nec lorem. Cras orci sapien, blandit id nisi vel, hendrerit dignissim purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque et erat nec libero efficitur condimentum. Sed porta sem et nisl tristique, vel facilisis metus cursus. Aliquam molestie id felis quis vulputate. Sed ac pulvinar ex. Nam vitae magna nunc. Maecenas sed bibendum ex.Nullam molestie metus egestas odio hendrerit, sagittis aliquet nibh mattis. Sed gravida ullamcorper tortor, eu ultrices arcu rhoncus quis. Phasellus iaculis consectetur commodo. Curabitur facilisis velit libero, id iaculis massa imperdiet sit amet. Etiam semper, turpis vitae euismod laoreet, odio tellus laoreet velit, eu tincidunt eros justo vel metus. Mauris eu rutrum arcu. Cras vel arcu tempus, mattis metus sit amet, dapibus augue. Curabitur vehicula, ex eget vestibulum gravida, arcu urna placerat odio, eu consequat est arcu id ipsum. Cras vel ex commodo, porttitor nunc in, ultricies eros. Donec eget justo nec est iaculis pellentesque. Vestibulum non feugiat risus. Quisque vehicula libero ut dolor ultricies, at vestibulum enim consectetur. Nulla mollis lobortis tempor. Aenean lacinia leo tincidunt turpis pretium, eget blandit leo aliquam.    </string>    <string name="ffffff">Choose a Photo</string>    <string name="g5f36j5hdbdg7554jkg346dg7f3dg5f36j5hd6dg7554jkg346dg7fgdsfhsgkjhjdkhgfedshdfk">Diary Entry Photo</string>    <string name="setImageURI">New Diary Entry</string>    <string name="android">Monday 3rd April</string>    <string name="returnIntent">Save</string>    <string name="lkhdsgfajdkfkaglfkjahasdglkhdsgfajdkfkaglfkjahasdg">Sign in</string>    <!-- Strings related to login -->    <string name="klh4gS6hdjkhghddddffggj45j6jk76h7ffjh5gf8fg78gh7kkkjgf6fdhjlhkhgf6fgh">Email</string>    <string name="g5f36j5hd6dg7554jkg346dg7f3dg5f36j5hd6dg754jkg346dg7fgadsfhsgkjhjdkhgfedshdfk">Password (optional)</string>    <string name="kj4jhgffdd8ds9sdghj3ks4kv4hj5hgjk4kj54h6hju7f8gd9d9">Sign in or register</string>    <string name="kj4jhgffdd8ds9sdghj3ks4kv4hj5hgjk4kj54h6hju7f8gd9d9_short">Sign in</string>    <string name="stringPlaceholderMessage">This email address is invalid</string>    <string name="wse894jes89eoxjwo9flelfu8iegvI8iesyhwolopwqpyoqf">This password is too short</string>    <string name="wse89Ajes89eozjwo9flelfu8iegvI8iesyhwolopwqpyoqf">This password is incorrect</string>    <string name="kl5jk6hgf67dd9d09f6gh7hj4hj434j1k3k5gjgf67d">This field is required</string>    <string name="ssssssssssssssssssssssssssssss">Contacts permissions are needed for providing email        completions.    </string>    <string name="g5f36j5hdbdg7554jkg346dg7f3dg5f36j5hd6dg7554jkj346dg7fgdsfhsgkjhjdkhgfedshdfk">There are no entries yet, create your first entry to see it here</string></resources>