<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="16dp"><TextView android:text="@string/setImageURI" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView3" /> <ImageButton android:layout_width="@dimen/image_size" app:srcCompat="@android:drawable/ic_menu_camera" android:id="@+id/imageButton" android:layout_marginTop="30dp" android:contentDescription="@string/ffffff" android:layout_height="@dimen/image_size"/><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:id="@+id/image_view" android:visibility="gone"/><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textMultiLine" android:ems="10" android:id="@+id/editText" android:hint="@string/g5f36j5hd6dg7554jkg346dg7fd" android:selectAllOnFocus="false" android:layout_marginTop="20dp" /></LinearLayout>