<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:id="@+id/kj23g6g2dh7h6gjh5k62ghf688"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:paddingLeft="@dimen/activity_horizontal_margin"    android:paddingRight="@dimen/activity_horizontal_margin"    android:paddingTop="@dimen/activity_vertical_margin">    <LinearLayout        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="match_parent">        <TextView            android:text="@string/android"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:id="@+id/textView2" />        <ImageView            android:layout_width="match_parent"            android:layout_height="wrap_content"            app:srcCompat="@mipmap/ic_launcher"            android:id="@+id/imageView"            android:contentDescription="@string/g5f36j5hdbdg7554jkg346dg7f3dg5f36j5hd6dg7554jkg346dg7fgdsfhsgkjhjdkhgfedshdfk" />        <ScrollView            android:layout_width="match_parent"            android:layout_height="match_parent">            <LinearLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:orientation="vertical" >                <TextView                    android:text="@string/setStateActive"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:id="@+id/textView" />            </LinearLayout>        </ScrollView>    </LinearLayout></LinearLayout>